fixed bug footer white space in main page on windows mode

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,6 +5,7 @@
 	flex-flow: column nowrap;
 	justify-content: center;
 	align-items: center;
+	min-height: 100vh;
 }
 
 .link {
