--- a/src/components/SiteFooter.module.scss
+++ b/src/components/SiteFooter.module.scss
@@ -7,6 +7,7 @@
 	position: relative;
 	bottom: 0;
 	left: 0;
+    margin-top: auto;
 }
 
 .eliraFooterBorder {
